force-app/main/default/objects/RH_Participation__c/RH_Participation__c.object-meta.xml
<CustomObject>
    <label>Participation</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Participation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>