force-app/main/default/objects/RH_Participation__c/fields/RH_Contact__c.field-meta.xml
<CustomField>
    <fullName>RH_Contact__c</fullName>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>