force-app/main/default/objects/RH_Participation__c/fields/RH_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>RH_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>RH_ExternalId</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>