force-app/main/default/objects/RH_Participation__c/fields/RH_Project__c.field-meta.xml
<CustomField>
    <fullName>RH_Project__c</fullName>
    <label>Project ID</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>